Template-nodeSelector-az-policy.yaml
---
# Template para proibir deploy sem o nodeselector
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: oparequirednodeselector
spec:
  crd:
    spec:
      names:
        kind: opaRequiredNodeselector
      validation:
        # Proibe deploy sem o nodeselector
        openAPIV3Schema:
          properties:
            image:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission
        violation[{"msg": msg}] {
                    input.review.kind.kind = "Deployment"
                    not input.review.object.spec.template.spec.nodeSelector
                    msg := "nodeSelector nao definido: http://confluence.viavarejo.com.br/pages/viewpage.action?pageId=64875615"
        }
